# Higurashi-Vita

./: .gitignore  CMakeLists.txt  COMPILING  COMPILING.txt  LICENSE.txt  Makefile  Makefile.3ds  Makefile.unsafe  PLACEHOLDER.txt  POST_DRAFT.txt  README.txt  ScriptAPIDraft  build.bat  buildandroid.bat  buildlinux  copyandroid.bat  happy.lua  logandroid.bat  makefile.3ds  makefile.general  makefile.vita  makefile.vita.alt  openandroiddir.bat  run.bat  rundebug  rundebugmem  runlinux  send3ds  send3dscia  sendandroid.bat  sendvita  updatehappy.bat
Include/: GeneralGood.h  GeneralGoodConfig.h  GeneralGoodExtended.h  GeneralGoodGraphics.h  GeneralGoodImages.h  GeneralGoodSound.h  GeneralGoodText.h  GeneralMain.c
PackagedResources/: 720to480.bat  Liberation-Sans-License.txt  README.txt
Test/: testVNDSIf.scr  testVNDSSet.scr
_Notes/: 111_20200702001625.license  NewFilmNotes.txt  OverclockNotes.txt  SCRIPT_CONVERTER_NOTES  Stuff.txt  _Notes.txt  cia.rsf  llex.c  oniktipnotes.txt  rnaodmnotes.txt
src/: FpsCapper.h  GeneralGood.h  GeneralGoodConfig.h  GeneralGoodExtended.h  GeneralGoodGraphics.h  GeneralGoodImages.h  GeneralGoodSound.h  GeneralGoodText.h  Graveyard.h  LICENSE.txt  LuaWrapperDefinitions.h  LuaWrapperHelpers.h  NathanDoubleScripting.h  Tests.h  VNDSScriptWrappers.h  _GeneralGoodConfiguration.h  fragmentMenu.c  fragmentMenu.h  insensitiveFileFinder.c  insensitiveFileFinder.h  jsonParser.c  jsonParser.h  legarchive.c  legarchive.h  main.c  main.h  utils.c  utils.h
stolenCode/: README  customgetline.c  customgetline.h  getline.h  goodvita2ddraw.h  qdbmp.c  (+2 more)
(+17 files in other folders)
